--- a/src/styles/calc.css
+++ b/src/styles/calc.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani');
+
 .calculator {
   padding: 3.75rem 4rem;
   margin: 2rem;
@@ -13,8 +15,9 @@
   text-align: right;
   margin-bottom: .75rem;
   box-shadow: 1px 1px 1px rgba(0,0,0,0.4) inset;
-  font-size: 1.75rem;
+  font-size: 2rem;
   border-radius: 2px;
+  font-family: 'Rajdhani', sans-serif;
 }
 .button {
   padding: .25rem;
@@ -23,9 +26,21 @@
   width: 5rem;
   height: 5rem;
   border-radius: 5px;
+  box-shadow: 0 7px #95a5a6;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.button:hover {
+  transform: translate(0, 2px);
+  box-shadow: 0 5px #95a5a6;
+}
+.button:active {
+  transform: translate(0, 7px);
+  box-shadow: none;
 }
 .button.empty {
   background: none;
+  box-shadow: none;
 }
 .left {
   float: left;
